# shijiebei

./: .gitignore
desktop-app/: DEVELOPMENT.md  index.html  package-lock.json  package.json
desktop-app/docs/: ARCHITECTURE.md
desktop-app/src/: api.js  events.js  legacyMain.js  main.js  refresh.js  state.js  styles.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: commands.rs  db.rs  http_client.rs  main.rs  models.rs
desktop-app/src-tauri/src/commands/: data_commands.rs  export_commands.rs  legacy_commands.rs  mod.rs  prediction_commands.rs  provider_commands.rs  recommendation_commands.rs  review_commands.rs  snapshot_commands.rs  system_commands.rs  upset_lab_commands.rs
desktop-app/src-tauri/src/services/: backtest_service.rs  data_fusion_service.rs  export_service.rs  match_service.rs  mod.rs  model_service.rs  odds_service.rs  project_health_service.rs  recommendation_service.rs  result_service.rs  review_guard_service.rs  review_service.rs  score_prior_service.rs  simulation_service.rs  snapshot_service.rs  source_service.rs  system_service.rs  upset_lab_service.rs
desktop-app/src-tauri/src/services/providers/: api_football_provider.rs  football_data_org_provider.rs  football_data_uk_provider.rs  mod.rs  odds_api_io_provider.rs  openfootball_provider.rs  statsbomb_provider.rs  the_odds_api_provider.rs  thesportsdb_provider.rs  understat_provider.rs
desktop-app/src/components/: ProjectHealthCard.js  RefreshStatusBar.js  ScorePriorCard.js
desktop-app/src/utils/: format.js
desktop-app/training/: README.md
(+65 files in other folders)
