[package]
name = "world_cup_odds_desktop"
version = "0.1.0"
description = "World Cup odds modelling desktop app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
